--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next-http-backend": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.2.0",
     "react-router-dom": "^6.8.2",
     "sitemap": "^8.0.0"
@@ -22,8 +23,8 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "sass": "^1.77.8",
-    "vite": "^4.1.0"
+    "vite": "^6.2.2"
   }
 }
